--- a/index.html
+++ b/index.html
@@ -1,77 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prineet's Techfolio</title>
-
-  <link rel="stylesheet" href="style.css">
-
-  <!-- Typed.js -->
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Prineet Kaur</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-  <!-- Sidebar -->
+  <!-- SIDEBAR -->
   <aside class="sidebar">
     <div class="profile">
-      <img src="assets/img/mylogo.jpg" alt="Profile Photo">
+      <img src="assets/img/myphoto.jpeg" alt="Profile" />
+      <h2>Prineet Kaur</h2>
+      <p class="role">Product Manager | AI | Strategy</p>
     </div>
 
-    <!-- SOCIAL ICONS -->
-    <div class="social-icons">
-      <a href="https://www.linkedin.com/in/prineetkaur/" target="https://www.linkedin.com/in/prineetkaur/">
-        <img src="assets/icons/linkedin.png" alt="LinkedIn">
-      </a>
-      <a href="https://github.com/PrineetKaur" target="https://github.com/PrineetKaur">
-        <img src="assets/icons/github.png" alt="GitHub">
-      </a>
-      <a href="https://medium.com/@bhurji.pk" target="https://medium.com/@bhurji.pk">
-        <img src="assets/icons/medium.png" alt="Medium">
-      </a>
-      <a href="https://www.instagram.com/prineet.kaur/" target="https://www.instagram.com/prineet.kaur/">
-        <img src="assets/icons/instagram.png" alt="Instagram">
-      </a>
-      <a href="mailto:bhurji.pk@gmail.com">
-        <img src="assets/icons/gmail.png" alt="Gmail">
-      </a>
-    </div>
-
+    <!-- NAVIGATION -->
     <nav class="nav">
-      <a href="#home" class="nav-link"><img class="icon" src="assets/icons/home.png" alt="Home"> Home</a>
-      <a href="#about" class="nav-link"><img class="icon" src="assets/icons/about.png" alt="About"> About</a>
-      <a href="#resume" class="nav-link"><img class="icon" src="assets/icons/resume.png" alt="Resume"> Resume</a>
-      <a href="#skills" class="nav-link"><img class="icon" src="assets/icons/skills.png" alt="Skills"> Skills</a>
-      <a href="#projects" class="nav-link"><img class="icon" src="assets/icons/projects.png" alt="Projects"> Projects</a>
-      <a href="#blogs" class="nav-link"><img class="icon" src="assets/icons/blogs.png" alt="Blogs"> Blogs</a>
-      <a href="#contact" class="nav-link"><img class="icon" src="assets/icons/contact.png" alt="Contact"> Contact</a>
+
+      <a class="nav-link" href="#home">
+        <img src="assets/img/home.png" class="icon" />
+        Home
+      </a>
+
+      <a class="nav-link" href="#about">
+        <img src="assets/img/about.png" class="icon" />
+        About
+      </a>
+
+      <a class="nav-link" href="#resume">
+        <img src="assets/img/resume.png" class="icon" />
+        Resume
+      </a>
+
+      <a class="nav-link" href="#portfolio">
+        <img src="assets/img/portfolio.png" class="icon" />
+        Portfolio
+      </a>
+
+      <a class="nav-link" href="#blog">
+        <img src="assets/img/blog.png" class="icon" />
+        Blog
+      </a>
+
+      <a class="nav-link" href="#contact">
+        <img src="assets/img/contact.png" class="icon" />
+        Contact
+      </a>
     </nav>
-    
-    <div class="sidebar-footer">
-      <small>© 2025 Prineet Kaur</small>
-    </div>
+
   </aside>
 
-  <!-- Main Content -->
+  <!-- MAIN CONTENT -->
   <main class="main">
+
+    <!-- HERO -->
     <section id="home" class="hero">
       <div class="hero-bg"></div>
       <div class="hero-overlay"></div>
+
       <div class="hero-content">
-        <h1><span class="accent">Prineet Kaur</span></h1>
-        <h2>
-          I'm a
-          <span class="typed" data-typed-items="Technical Product Communicator, Experienced Program Manager, Developer Advocate"></span>
-        </h2>
+        <h1>Hello, I'm Prineet</h1>
+        <h2>Product Manager • AI • UX Strategy</h2>
         <p class="hero-desc">
-          I love to write about DevOps, Infra, Observability, DevEx, and AI's impact on them ✍️ ✨ 🚀
+          I create thoughtful digital products with a focus on AI, user-centric design,
+          and scalable business impact.
         </p>
-        <div class="hero-ctas">
-          <a href="#projects" class="btn">View Projects</a>
-          <a href="#contact" class="btn-outline">Contact Me</a>
+
+        <div class="social-icons">
+          <a href="https://github.com/prineetkaur" target="_blank">
+            <img src="assets/img/github.png" />
+          </a>
+          <a href="mailto:prineet@gmail.com">
+            <img src="assets/img/gmail.png" />
+          </a>
+          <a href="#">
+            <img src="assets/img/medium.png" />
+          </a>
+          <a href="https://linkedin.com/in/prineet" target="_blank">
+            <img src="assets/img/linkedin.png" />
+          </a>
+          <a href="#">
+            <img src="assets/img/instagram.png" />
+          </a>
         </div>
+
       </div>
     </section>
    
@@ -243,7 +258,8 @@
 
     
     <footer class="site-footer">
-      <p>PK Techfolio...Built with ❤️ using Github.</p>
+      <p> © 2025 Prineet Kaur. All Rights Reserved.</p>
+      <p> Built with ❤️ using Github.</p>
     </footer>
 
   </main>
