--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <a href="https://www.instagram.com/prineet.kaur/" target="https://www.instagram.com/prineet.kaur/">
         <img src="assets/icons/instagram.png" alt="Instagram">
       </a>
+
+    <p>“Technology moves fast, and understanding often lags. I close that gap...” </p>
       
     </div>
 
