--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <img src="assets/icons/instagram.png" alt="Instagram">
       </a>
 
-    <p>“Technology moves fast, and understanding often lags. I close that gap...” </p>
+    <div>
+      “Technology moves fast, and understanding often lags. I close that gap...” 
+    </div>
       
     </div>
 
