--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
       <a href="https://www.instagram.com/prineet.kaur/" target="https://www.instagram.com/prineet.kaur/">
         <img src="assets/icons/instagram.png" alt="Instagram">
       </a>
-
-    <div>
-      “Technology moves fast, and understanding often lags. I close that gap...” 
-    </div>
       
+    </div>
+
+    <div class="heading quote">
+      <p>
+      “Technology moves fast, and understanding often lags. I close that gap...” 
+      </p>  
     </div>
 
     <nav class="nav">
