--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 <!-- CONTACT SECTION -->
 <section id="contact" class="section contact-section">
   <h2 class="section-title">
-    <span class="section-title-icon">📨</span> Contact
+    <span class="section-title-icon"> </span> Contact
   </h2>
 
   <div class="contact-wrapper" style="
