--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="heading quote">
       <h3>
-      “Technology moves fast, and understanding often lags. I close that gap...” 
+      “Technology moves fast, and understanding often lags. I close that gap” 
       </h3>  
     </div>
 
@@ -69,12 +69,12 @@
       <div class="hero-content">
         <h1><span class="accent">Prineet Kaur</span></h1>
         <h2>
-          I'm a
-          <span class="typed" data-typed-items="Technical Product Communicator, Experienced Program Manager, Developer Advocate"></span>
+          I'm 
+          <span class="typed" data-typed-items=" a Technical Product Communicator, an Experienced Program Manager, and a Developer Advocate"></span>
         </h2>
-        <p class="hero-desc">
+   <!--  <p class="hero-desc">
           I love to write about DevOps, Infra, Observability, DevEx, and AI's impact on them ✍️ ✨ 🚀
-        </p>
+        </p>  -->
         <div class="hero-ctas">
           <a href="#projects" class="btn">View Projects</a>
           <a href="#contact" class="btn-outline">Contact Me</a>
