--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="heading quote">
       <h3>
-      “Technology moves fast, and understanding often lags. I close that gap” 
+      “I give structure to chaos and direction to complexity”
       </h3>  
     </div>
 
