--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
     <div class="heading quote">
       <h3>
-      “I give structure to chaos and direction to complexity”
+      <!-- “I give structure to chaos and direction to complexity” -->
+      “I make tech products easier to understand, use, and adopt”
       </h3>  
     </div>
 
