--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
     <div class="heading quote">
       <h3>
       <!-- “I give structure to chaos and direction to complexity” -->
-      “I make tech products easier to understand, use, and adopt”
+      “I make technical products easier to ship, understand, use, and adopt.”
       </h3>  
     </div>
 
     <nav class="nav">
       <a href="#home" class="nav-link"><img class="icon" src="assets/icons/home.png" alt="Home"> Home</a>
       <a href="#about" class="nav-link"><img class="icon" src="assets/icons/about.png" alt="About"> About</a>
-      <a href="#resume" class="nav-link"><img class="icon" src="assets/icons/resume.png" alt="Resume"> Resume</a>
-      <a href="#skills" class="nav-link"><img class="icon" src="assets/icons/skills.png" alt="Skills"> Skills</a>
-      <a href="#projects" class="nav-link"><img class="icon" src="assets/icons/projects.png" alt="Projects"> Projects</a>
+      <a href="#tools" class="nav-link"><img class="icon" src="assets/icons/skills.png" alt="Tools"> Tools</a>
+      <a href="#writing" class="nav-link"><img class="icon" src="assets/icons/resume.png" alt="Resume"> Writing</a>
       <a href="#blogs" class="nav-link"><img class="icon" src="assets/icons/blogs.png" alt="Blogs"> Blogs</a>
+      <a href="#projects" class="nav-link"><img class="icon" src="assets/icons/projects.png" alt="Projects"> Projects</a>
       <a href="#contact" class="nav-link"><img class="icon" src="assets/icons/contact.png" alt="Contact"> Contact</a>
     </nav>
     
@@ -71,7 +71,7 @@
         <h1><span class="accent">Prineet Kaur</span></h1>
         <h2>
           I'm 
-          <span class="typed" data-typed-items=" a Technical Product Communicator, an Experienced Program Manager, and a Developer Advocate"></span>
+          <span class="typed" data-typed-items=" a Technical Product Communicator, an Experienced Program Manager, a Developer Advocate"></span>
         </h2>
    <!--  <p class="hero-desc">
           I love to write about DevOps, Infra, Observability, DevEx, and AI's impact on them ✍️ ✨ 🚀
@@ -92,24 +92,54 @@
       </p>
     </section>
 
-    <!-- RESUME -->
-    <section id="resume" class="section">
-      <h2 class="section-title">Resume</h2>
-      <div class="resume-grid">
+    <!-- TOOLS -->
+    <section id="tools" class="section">
+      <h2 class="section-title">Tools</h2>
 
-        <div class="resume-item">
+      <div class="tools-grid">
+
+        <div class="tool">
+          <div class="tool-head"><strong>Python</strong><span>85%</span></div>
+          <div class="bar"><span style="width: 85%"></span></div>
+        </div>
+
+        <div class="tool">
+          <div class="tool-head"><strong>R</strong><span>95%</span></div>
+          <div class="bar"><span style="width: 95%"></span></div>
+        </div>
+
+        <div class="tool">
+          <div class="tool-head"><strong>SQL</strong><span>75%</span></div>
+          <div class="bar"><span style="width: 75%"></span></div>
+        </div>
+
+        <div class="tool">
+          <div class="tool-head"><strong>Hugo</strong><span>90%</span></div>
+          <div class="bar"><span style="width: 90%"></span></div>
+        </div>
+
+      </div>
+    </section>
+    
+
+    <!-- WRITING -->
+    <section id="writing" class="section">
+      <h2 class="section-title">My Technical Writing</h2>
+      <div class="writing-grid">
+
+        <div class="writing-item">
           <h3>Tech Product Enabler — Company A</h3>
           <span class="muted">2023 — Present</span>
           <p>Helping teams adopt modern tooling and internal developer platforms.</p>
         </div>
 
-        <div class="resume-item">
+        <div class="writing-item">
           <h3>Developer Advocate — Company B</h3>
           <span class="muted">2021 — 2023</span>
           <p>Worked on product communication, docs, workshops, and developer onboarding.</p>
         </div>
 
-        <div class="resume-item">
+        <div class="writing-item">
           <h3>BSc Computer Science</h3>
           <span class="muted">2017 — 2020</span>
           <p>Graduated with a focus on software engineering and cloud systems.</p>
@@ -118,32 +148,22 @@
       </div>
     </section>
 
-    <!-- SKILLS -->
-    <section id="skills" class="section">
-      <h2 class="section-title">Skills</h2>
+    <!-- BLOGS -->
+    <section id="blogs" class="section">
+      <h2 class="section-title">Blogs</h2>
 
-      <div class="skills-grid">
-
-        <div class="skill">
-          <div class="skill-head"><strong>DevOps</strong><span>85%</span></div>
-          <div class="bar"><span style="width: 85%"></span></div>
+      <div class="blog-list">
+        <div class="blog">
+          <h3>Scaling Developer Experience</h3>
+          <p class="muted">Jan 2025 – 6 min read</p>
+          <p>What it takes to build great DevEx for 100+ teams.</p>
         </div>
 
-        <div class="skill">
-          <div class="skill-head"><strong>Documentation</strong><span>95%</span></div>
-          <div class="bar"><span style="width: 95%"></span></div>
+        <div class="blog">
+          <h3>Understanding Observability</h3>
+          <p class="muted">Dec 2024 – 5 min read</p>
+          <p>A practical guide to metrics, logs, traces, and alerting.</p>
         </div>
-
-        <div class="skill">
-          <div class="skill-head"><strong>Cloud & Infra</strong><span>75%</span></div>
-          <div class="bar"><span style="width: 75%"></span></div>
-        </div>
-
-        <div class="skill">
-          <div class="skill-head"><strong>Developer Experience</strong><span>90%</span></div>
-          <div class="bar"><span style="width: 90%"></span></div>
-        </div>
-
       </div>
     </section>
 
@@ -174,24 +194,6 @@
       </div>
     </section>
 
-    <!-- BLOGS -->
-    <section id="blogs" class="section">
-      <h2 class="section-title">Blogs</h2>
-
-      <div class="blog-list">
-        <div class="blog">
-          <h3>Scaling Developer Experience</h3>
-          <p class="muted">Jan 2025 – 6 min read</p>
-          <p>What it takes to build great DevEx for 100+ teams.</p>
-        </div>
-
-        <div class="blog">
-          <h3>Understanding Observability</h3>
-          <p class="muted">Dec 2024 – 5 min read</p>
-          <p>A practical guide to metrics, logs, traces, and alerting.</p>
-        </div>
-      </div>
-    </section>
 
 <!-- CONTACT SECTION -->
 <section id="contact" class="section contact-section">
