--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="heading quote">
       <h3>
       <!-- “I give structure to chaos and direction to complexity” -->
-      “I make technical products easier to ship, understand, use, and adopt.”
+      “I make it easier to build, ship, understand, and adopt Technical Products”
       </h3>  
     </div>
 
@@ -85,7 +85,7 @@
 
     <!-- ABOUT -->
     <section id="about" class="section">
-      <h2 class="section-title">About</h2>
+      <h2 class="section-title">About Me</h2>
       <p>
         I’m a passionate developer and product communicator with experience across DevOps, Developer Experience,
         Observability and infrastructure platforms.
@@ -94,7 +94,7 @@
 
     <!-- TOOLS -->
     <section id="tools" class="section">
-      <h2 class="section-title">Tools</h2>
+      <h2 class="section-title">Technologies Toolkit</h2>
 
       <div class="tools-grid">
 
@@ -124,7 +124,7 @@
 
     <!-- WRITING -->
     <section id="writing" class="section">
-      <h2 class="section-title">My Technical Writing</h2>
+      <h2 class="section-title">Technical Writing</h2>
       <div class="writing-grid">
 
         <div class="writing-item">
@@ -150,7 +150,7 @@
 
     <!-- BLOGS -->
     <section id="blogs" class="section">
-      <h2 class="section-title">Blogs</h2>
+      <h2 class="section-title">Tech Blogs</h2>
 
       <div class="blog-list">
         <div class="blog">
@@ -169,7 +169,7 @@
 
     <!-- PROJECTS -->
     <section id="projects" class="section">
-      <h2 class="section-title">Projects</h2>
+      <h2 class="section-title">Tech Projects</h2>
 
       <div class="cards">
 
@@ -238,8 +238,10 @@
 
       <p style="line-height: 26px; margin-bottom: 25px;">
         My inbox is always open. Whether you have a question or just want to say hi,
-        I’ll try my best to get back to you! <br><br>
-        Let's connect and discuss.
+         I love to talk and discuss Latest Technologies and anything related to Platform/Context Engineering or Modern DevOps. 
+        And share my learnings and experiences with a Sprinkle of my Storytelling Skills. <br><br>
+        So ask any question...I usually try to get back within a week <br><br>
+        Or we can simply book a coffee session ☕️ <br><br>
       </p>
 
       <a href="mailto:bhurji.pk@gmail.com" class="btn">Let's connect</a>
