--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="heading quote">
       <h3>
       <!-- “I give structure to chaos and direction to complexity” -->
-      “I make it easier to build, ship, understand, and adopt Technical Products”
+      “I make it easier to build, ship, understand, and adopt technical products 👩‍💻”
       </h3>  
     </div>
 
@@ -51,8 +51,8 @@
       <a href="#home" class="nav-link"><img class="icon" src="assets/icons/home.png" alt="Home"> Home</a>
       <a href="#about" class="nav-link"><img class="icon" src="assets/icons/about.png" alt="About"> About</a>
       <a href="#tools" class="nav-link"><img class="icon" src="assets/icons/skills.png" alt="Tools"> Tools</a>
-      <a href="#writing" class="nav-link"><img class="icon" src="assets/icons/resume.png" alt="Resume"> Writing</a>
       <a href="#blogs" class="nav-link"><img class="icon" src="assets/icons/blogs.png" alt="Blogs"> Blogs</a>
+      <a href="#writing" class="nav-link"><img class="icon" src="assets/icons/resume.png" alt="Docs as Code"> Writing</a>
       <a href="#projects" class="nav-link"><img class="icon" src="assets/icons/projects.png" alt="Projects"> Projects</a>
       <a href="#contact" class="nav-link"><img class="icon" src="assets/icons/contact.png" alt="Contact"> Contact</a>
     </nav>
@@ -94,7 +94,7 @@
 
     <!-- TOOLS -->
     <section id="tools" class="section">
-      <h2 class="section-title">Technologies Toolkit</h2>
+      <h2 class="section-title">Tech Toolkit</h2>
 
       <div class="tools-grid">
 
@@ -122,9 +122,28 @@
     </section>
     
 
-    <!-- WRITING -->
+    <!-- TECH BLOGS -->
+    <section id="blogs" class="section">
+      <h2 class="section-title">Blogs and Articles</h2>
+
+      <div class="blog-list">
+        <div class="blog">
+          <h3>Scaling Developer Experience</h3>
+          <p class="muted">Jan 2025 – 6 min read</p>
+          <p>What it takes to build great DevEx for 100+ teams.</p>
+        </div>
+
+        <div class="blog">
+          <h3>Understanding Observability</h3>
+          <p class="muted">Dec 2024 – 5 min read</p>
+          <p>A practical guide to metrics, logs, traces, and alerting.</p>
+        </div>
+      </div>
+    </section>
+    
+    <!-- TECHNICAL WRITING -->
     <section id="writing" class="section">
-      <h2 class="section-title">Technical Writing</h2>
+      <h2 class="section-title">Technical Documentation</h2>
       <div class="writing-grid">
 
         <div class="writing-item">
@@ -148,26 +167,7 @@
       </div>
     </section>
 
-    <!-- BLOGS -->
-    <section id="blogs" class="section">
-      <h2 class="section-title">Tech Blogs</h2>
-
-      <div class="blog-list">
-        <div class="blog">
-          <h3>Scaling Developer Experience</h3>
-          <p class="muted">Jan 2025 – 6 min read</p>
-          <p>What it takes to build great DevEx for 100+ teams.</p>
-        </div>
-
-        <div class="blog">
-          <h3>Understanding Observability</h3>
-          <p class="muted">Dec 2024 – 5 min read</p>
-          <p>A practical guide to metrics, logs, traces, and alerting.</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- PROJECTS -->
+    <!-- TECH PROJECTS -->
     <section id="projects" class="section">
       <h2 class="section-title">Tech Projects</h2>
 
@@ -237,11 +237,10 @@
       <h3 style="color: var(--text-lightgrey); margin-bottom:20px;">Get in Touch</h3>
 
       <p style="line-height: 26px; margin-bottom: 25px;">
-        My inbox is always open. Whether you have a question or just want to say hi,
-         I love to talk and discuss Latest Technologies and anything related to Platform/Context Engineering or Modern DevOps. 
+        I love to talk and discuss Latest Technologies and anything related to Platform/Context Engineering or Modern DevOps. 
         And share my learnings and experiences with a Sprinkle of my Storytelling Skills. <br><br>
-        So ask any question...I usually try to get back within a week <br><br>
-        Or we can simply book a coffee session ☕️ <br><br>
+        So ask any question...I will get back within a week <br><br>
+        Or we can also book a ☕️ session <br><br>
       </p>
 
       <a href="mailto:bhurji.pk@gmail.com" class="btn">Let's connect</a>
