--- a/index.html
+++ b/index.html
@@ -210,12 +210,16 @@
     <!-- LEFT -->
     <div class="contact-left box" style="flex:1;">
       <div class="info-item" style="margin-bottom: 25px;">
-        <h3 style="color: var(--text-lightgrey);">Address</h3>
+        <h3 style="color: var(--text-lightgrey);">Location</h3>
+
+        <h3 style="color: var(--text-lightgrey);">
+        <img src="assets/icons/location.png" alt="Location" class="contact-icon">Location</h3>
         <p>Paris, France</p>
       </div>
 
       <div class="info-item" style="margin-bottom: 25px;">
-        <h3 style="color: var(--text-lightgrey);">Email Me</h3>
+        <h3 style="color: var(--text-lightgrey);">
+      <img src="assets/icons/gmail.png" alt="Email" class="contact-icon"> Email</h3>
         <p>bhurji.pk@gmail.com</p>
       </div>
 
@@ -237,10 +241,9 @@
       <h3 style="color: var(--text-lightgrey); margin-bottom:20px;">Get in Touch</h3>
 
       <p style="line-height: 26px; margin-bottom: 25px;">
-        I love to talk and discuss Latest Technologies and anything related to Platform/Context Engineering or Modern DevOps. 
-        And share my learnings and experiences with a Sprinkle of my Storytelling Skills. <br><br>
-        So ask any question...I will get back within a week <br><br>
-        Or we can also book a ☕️ session <br><br>
+        I love to talk about the latest technologies and AI's impact on the developer product space. 
+        So if you are inclined towards any such topics, ask a question and I will get back within a week <br><br>
+        Or we can always book a ☕️ session <br><br>
       </p>
 
       <a href="mailto:bhurji.pk@gmail.com" class="btn">Let's connect</a>
