--- a/index.html
+++ b/index.html
@@ -210,19 +210,22 @@
     <!-- LEFT -->
     <div class="contact-left box" style="flex:1;">
       <div class="info-item" style="margin-bottom: 25px;">
-        <h3 style="color: var(--text-lightgrey);">Location</h3>
-
-        <h3 style="color: var(--text-lightgrey);">
-        <img src="assets/icons/location.png" alt="Location" class="contact-icon">Location</h3>
+    <div class="info-header">
+      <img src="assets/icons/address-icon.png" alt="Address" class="contact-icon">
+      <h3 style="color: var(--text-lightgrey);">Location</h3>
+    </div>
         <p>Paris, France</p>
       </div>
 
-      <div class="info-item" style="margin-bottom: 25px;">
-        <h3 style="color: var(--text-lightgrey);">
-      <img src="assets/icons/gmail.png" alt="Email" class="contact-icon"> Email</h3>
+  <div class="info-item" style="margin-bottom: 25px;">
+    <!-- Wrapper for the icon and heading -->
+    <div class="info-header">
+      <img src="assets/icons/email-icon.png" alt="Email" class="contact-icon">
+      <h3 style="color: var(--text-lightgrey);">Email Me</h3>
+    </div>
         <p>bhurji.pk@gmail.com</p>
       </div>
-
+      
       <iframe 
         style="width:100%;height:260px;border:0;border-radius:10px;margin-top:20px;"
         src="https://www.google.com/maps/embed/v1/place?q=Paris,+France&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
