--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="heading quote">
       <h3>
       <!-- “I give structure to chaos and direction to complexity” -->
-      “I make it easier to build, ship, understand, and adopt technical products 👩‍💻”
+      “I make it easier to build, ship, understand, and adopt technical products”
       </h3>  
     </div>
 
@@ -208,25 +208,30 @@
   ">
 
     <!-- LEFT -->
-    <div class="contact-left box" style="flex:1;">
-      <div class="info-item" style="margin-bottom: 25px;">
+<div class="contact-left box" style="flex:1;">
+  <div class="info-item" style="margin-bottom: 25px;">
+    <!-- Wrapper for the icon and heading + text -->
     <div class="info-header">
-      <img src="assets/icons/address-icon.png" alt="Address" class="contact-icon">
-      <h3 style="color: var(--text-lightgrey);">Location</h3>
-    </div>
+      <img src="assets/icons/location.png" alt="Location" class="contact-icon">
+      <div class="text-wrapper">
+        <h3 style="color: var(--text-lightgrey);">Location</h3>
         <p>Paris, France</p>
       </div>
+    </div>
+  </div>
 
   <div class="info-item" style="margin-bottom: 25px;">
-    <!-- Wrapper for the icon and heading -->
+    <!-- Wrapper for the icon and heading + text -->
     <div class="info-header">
-      <img src="assets/icons/email-icon.png" alt="Email" class="contact-icon">
-      <h3 style="color: var(--text-lightgrey);">Email Me</h3>
-    </div>
+      <img src="assets/icons/gmail.png" alt="Email" class="contact-icon">
+      <div class="text-wrapper">
+        <h3 style="color: var(--text-lightgrey);">Email</h3>
         <p>bhurji.pk@gmail.com</p>
       </div>
-      
-      <iframe 
+    </div>
+  </div>
+          
+  <iframe 
         style="width:100%;height:260px;border:0;border-radius:10px;margin-top:20px;"
         src="https://www.google.com/maps/embed/v1/place?q=Paris,+France&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
       </iframe>
@@ -245,7 +250,7 @@
 
       <p style="line-height: 26px; margin-bottom: 25px;">
         I love to talk about the latest technologies and AI's impact on the developer product space. 
-        So if you are inclined towards any such topics, ask a question and I will get back within a week <br><br>
+        So if you are inclined towards any such topics, shoot a question, and I will get back within a week <br><br>
         Or we can always book a ☕️ session <br><br>
       </p>
 
