--- a/index.html
+++ b/index.html
@@ -147,21 +147,18 @@
       <div class="writing-grid">
 
         <div class="writing-item">
-          <h3>Tech Product Enabler — Company A</h3>
-          <span class="muted">2023 — Present</span>
-          <p>Helping teams adopt modern tooling and internal developer platforms.</p>
+          <h3>Automation, Generative AI & Agentic AI</h3>
+          <p>How we got from “Auto Scripts” to “Self-Reasoning Systems”</p>
         </div>
 
         <div class="writing-item">
-          <h3>Developer Advocate — Company B</h3>
-          <span class="muted">2021 — 2023</span>
-          <p>Worked on product communication, docs, workshops, and developer onboarding.</p>
+          <h3>Smarter Tools, Dumber Mistakes: When AI Thought It Was Smarter Than You, And You Believed It!</h3>
+          <p>How Not to Fall in the Trap of “Garbage Code and Silent Bugs🐛”</p>
         </div>
 
         <div class="writing-item">
-          <h3>BSc Computer Science</h3>
-          <span class="muted">2017 — 2020</span>
-          <p>Graduated with a focus on software engineering and cloud systems.</p>
+          <h3>Embracing the “Vibe” in Vibe Coding: How to Work Faster Without Losing Control</h3>
+          <p>Why the Next Big Developer Skill isn’t Syntax anymore. It’s Knowing How to Guide Intelligently the Tools!</p>
         </div>
 
       </div>
