--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
     </section>
 
-    <!-- ABOUT -->
+    <!-- ABOUT ME -->
     <section id="about" class="section">
       <h2 class="section-title">About Me</h2>
       <p>
@@ -92,7 +92,7 @@
       </p>
     </section>
 
-    <!-- TOOLS -->
+    <!-- TECH TOOLKIT -->
     <section id="tools" class="section">
       <h2 class="section-title">Tech Toolkit</h2>
 
@@ -129,13 +129,11 @@
       <div class="blog-list">
         <div class="blog">
           <h3>Scaling Developer Experience</h3>
-          <p class="muted">Jan 2025 – 6 min read</p>
           <p>What it takes to build great DevEx for 100+ teams.</p>
         </div>
 
         <div class="blog">
           <h3>Understanding Observability</h3>
-          <p class="muted">Dec 2024 – 5 min read</p>
           <p>A practical guide to metrics, logs, traces, and alerting.</p>
         </div>
       </div>
@@ -143,22 +141,24 @@
     
     <!-- TECHNICAL WRITING -->
     <section id="writing" class="section">
-      <h2 class="section-title">Technical Documentation</h2>
-      <div class="writing-grid">
+      <h2 class="writing-title">Technical Documentation</h2>
 
         <div class="writing-item">
-          <h3>Automation, Generative AI & Agentic AI</h3>
-          <p>How we got from “Auto Scripts” to “Self-Reasoning Systems”</p>
+           <div class="writing">
+             <h3>Automation, Generative AI & Agentic AI</h3>
+             <p>How we got from “Auto Scripts” to “Self-Reasoning Systems”</p>
         </div>
 
         <div class="writing-item">
-          <h3>Smarter Tools, Dumber Mistakes: When AI Thought It Was Smarter Than You, And You Believed It!</h3>
-          <p>How Not to Fall in the Trap of “Garbage Code and Silent Bugs🐛”</p>
+           <div class="writing">
+            <h3>Smarter Tools, Dumber Mistakes: When AI Thought It Was Smarter Than You, And You Believed It!</h3>
+            <p>How Not to Fall in the Trap of “Garbage Code and Silent Bugs🐛”</p>
         </div>
 
         <div class="writing-item">
-          <h3>Embracing the “Vibe” in Vibe Coding: How to Work Faster Without Losing Control</h3>
-          <p>Why the Next Big Developer Skill isn’t Syntax anymore. It’s Knowing How to Guide Intelligently the Tools!</p>
+           <div class="writing">
+            <h3>Embracing the “Vibe” in Vibe Coding: How to Work Faster Without Losing Control</h3>
+            <p>Why the Next Big Developer Skill isn’t Syntax anymore. It’s Knowing How to Guide Intelligently the Tools!</p>
         </div>
 
       </div>
@@ -211,7 +211,7 @@
     <div class="info-header">
       <img src="assets/icons/location.png" alt="Location" class="contact-icon">
       <div class="text-wrapper">
-        <h3 style="color: var(--text-lightgrey);">Location</h3>
+        <h3 style="color: var(--grey-label);">Location</h3>
         <p>Paris, France</p>
       </div>
     </div>
@@ -222,7 +222,7 @@
     <div class="info-header">
       <img src="assets/icons/gmail.png" alt="Email" class="contact-icon">
       <div class="text-wrapper">
-        <h3 style="color: var(--text-lightgrey);">Email</h3>
+        <h3 style="color: var(--grey-label);">Email</h3>
         <p>bhurji.pk@gmail.com</p>
       </div>
     </div>
@@ -243,7 +243,7 @@
         flex-direction:column;
         justify-content:center;
     ">
-      <h3 style="color: var(--text-lightgrey); margin-bottom:20px;">Get in Touch</h3>
+      <h3 style="color: var(--grey-label); margin-bottom:20px;">Get in Touch</h3>
 
       <p style="line-height: 26px; margin-bottom: 25px;">
         I love to talk about the latest technologies and AI's impact on the developer product space. 
