--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     
     <!-- TECHNICAL WRITING -->
     <section id="writing" class="section">
-      <h2 class="writing-title">Technical Documentation</h2>
+      <h2 class="section-title">Technical Documentation</h2>
 
         <div class="writing-item">
           
