--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </p>
     </section>
 
-    <!-- TECH TOOLKIT -->
+    <!-- TECH TOOLKIT 
     <section id="tools" class="section">
       <h2 class="section-title">Tech Toolkit</h2>
 
@@ -119,7 +119,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
     
 
     <!-- TECH BLOGS -->
