--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <nav class="nav">
       <a href="#home" class="nav-link"><img class="icon" src="assets/icons/home.png" alt="Home"> Home</a>
       <a href="#about" class="nav-link"><img class="icon" src="assets/icons/about.png" alt="About"> About</a>
-      <a href="#tools" class="nav-link"><img class="icon" src="assets/icons/skills.png" alt="Tools"> Tools</a>
+ <!-- <a href="#tools" class="nav-link"><img class="icon" src="assets/icons/skills.png" alt="Tools"> Tools</a> -->
       <a href="#blogs" class="nav-link"><img class="icon" src="assets/icons/blogs.png" alt="Blogs"> Blogs</a>
       <a href="#writing" class="nav-link"><img class="icon" src="assets/icons/resume.png" alt="Docs as Code"> Writing</a>
       <a href="#projects" class="nav-link"><img class="icon" src="assets/icons/projects.png" alt="Projects"> Projects</a>
@@ -90,37 +90,7 @@
         I’m a passionate developer and product communicator with experience across DevOps, Developer Experience,
         Observability and infrastructure platforms.
       </p>
-    </section>
-
-    <!-- TECH TOOLKIT 
-    <section id="tools" class="section">
-      <h2 class="section-title">Tech Toolkit</h2>
-
-      <div class="tools-grid">
-
-        <div class="tool">
-          <div class="tool-head"><strong>Python</strong><span>85%</span></div>
-          <div class="bar"><span style="width: 85%"></span></div>
-        </div>
-
-        <div class="tool">
-          <div class="tool-head"><strong>R</strong><span>95%</span></div>
-          <div class="bar"><span style="width: 95%"></span></div>
-        </div>
-
-        <div class="tool">
-          <div class="tool-head"><strong>SQL</strong><span>75%</span></div>
-          <div class="bar"><span style="width: 75%"></span></div>
-        </div>
-
-        <div class="tool">
-          <div class="tool-head"><strong>Hugo</strong><span>90%</span></div>
-          <div class="bar"><span style="width: 90%"></span></div>
-        </div>
-
-      </div>
-    </section> -->
-    
+    </section>    
 
     <!-- TECH BLOGS -->
     <section id="blogs" class="section">
@@ -144,19 +114,19 @@
     <section id="writing" class="section">
       <h2 class="section-title">Technical Documentation</h2>
 
-        <div class="writing-item">
+      <div class="writing-item">
           
-           <div class="writing">
-             <h3>Automation, Generative AI & Agentic AI</h3>
-             <p>How we got from “Auto Scripts” to “Self-Reasoning Systems”</p>
-        </div>
-
-           <div class="writing">
-            <h3>Smarter Tools, Dumber Mistakes: When AI Thought It Was Smarter Than You, And You Believed It!</h3>
-            <p>How Not to Fall in the Trap of “Garbage Code and Silent Bugs🐛”</p>
-        </div>
+       <div class="writing">
+          <h3>Automation, Generative AI & Agentic AI</h3>
+          <p>How we got from “Auto Scripts” to “Self-Reasoning Systems”</p>
       </div>
-    </section>
+
+       <div class="writing">
+          <h3>Smarter Tools, Dumber Mistakes: When AI Thought It Was Smarter Than You, And You Believed It!</h3>
+          <p>How Not to Fall in the Trap of “Garbage Code and Silent Bugs🐛”</p>
+      </div>
+    </div>
+  </section>
 
     <!-- TECH PROJECTS -->
     <section id="projects" class="section">
