--- a/index.html
+++ b/index.html
@@ -93,37 +93,37 @@
     </section>    
 
     <!-- TECH BLOGS -->
-    <section id="blogs" class="section">
+    <section id="blog" class="section">
     <h2 class="section-title">Blogs and Articles</h2>
 
       <div class="blogcards">
 
         <div class="blogcard">
-          <img src="assets/img/myphoto.jpeg" alt="Project 1">
+          <img src="assets/img/myphoto.jpeg" alt="Blog 1">
           <h3>Internal Dev Portal</h3>
           <p>A portal enabling self-service for engineering teams.</p>
         </div>
 
         <div class="blogcard">
-          <img src="assets/img/myphoto.jpeg" alt="Project 2">
+          <img src="assets/img/myphoto.jpeg" alt="Blog 2">
           <h3>Observability Dashboard</h3>
           <p>Golden signals and performance insights.</p>
         </div>
 
         <div class="blogcard">
-          <img src="assets/img/myphoto.jpeg" alt="Project 3">
+          <img src="assets/img/myphoto.jpeg" alt="Blog 3">
           <h3>Docs-as-Code System</h3>
           <p>Automated docs pipeline powered by markdown.</p>
         </div>
          
         <div class="blogcard">
-          <img src="assets/img/myphoto.jpeg" alt="Project 3">
+          <img src="assets/img/myphoto.jpeg" alt="Blog 4">
           <h3>Docs-as-Code System</h3>
           <p>Automated docs pipeline powered by markdown.</p>
         </div>
 
        <div class="blogcard">
-          <img src="assets/img/myphoto.jpeg" alt="Project 3">
+          <img src="assets/img/myphoto.jpeg" alt="Blog 5">
           <h3>Docs-as-Code System</h3>
           <p>Automated docs pipeline powered by markdown.</p>
         </div>
@@ -151,7 +151,7 @@
   </section>
 
     <!-- TECH PROJECTS -->
-    <section id="projects" class="section">
+    <section id="project" class="section">
       <h2 class="section-title">Tech Projects</h2>
 
       <div class="projectcards">
