--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
           <h3>Docs-as-Code System</h3>
           <p>Automated docs pipeline powered by markdown.</p>
         </div>
+
+       <div class="blogcard">
+          <img src="assets/img/myphoto.jpeg" alt="Blog 6">
+          <h3>Docs-as-Code System</h3>
+          <p>Automated docs pipeline powered by markdown.</p>
+      </div>
  
 
       </div>
@@ -158,22 +164,27 @@
 
         <div class="projectcard">
           <img src="assets/img/myphoto.jpeg" alt="Project 1">
-          <h3>Internal Dev Portal</h3>
-          <p>A portal enabling self-service for engineering teams.</p>
         </div>
 
         <div class="projectcard">
           <img src="assets/img/myphoto.jpeg" alt="Project 2">
-          <h3>Observability Dashboard</h3>
-          <p>Golden signals and performance insights.</p>
         </div>
 
         <div class="projectcard">
           <img src="assets/img/myphoto.jpeg" alt="Project 3">
-          <h3>Docs-as-Code System</h3>
-          <p>Automated docs pipeline powered by markdown.</p>
+        </div>
+        
+        <div class="projectcard">
+          <img src="assets/img/myphoto.jpeg" alt="Project 4">
         </div>
 
+        <div class="projectcard">
+          <img src="assets/img/myphoto.jpeg" alt="Project 5">
+        </div>
+
+        <div class="projectcard">
+          <img src="assets/img/myphoto.jpeg" alt="Project 6">
+        </div>
       </div>
     </section>
 
