--- a/index.html
+++ b/index.html
@@ -73,9 +73,6 @@
           I'm 
           <span class="typed" data-typed-items=" a Technical Product Communicator, an Experienced Program Manager, a Developer Advocate"></span>
         </h2>
-   <!--  <p class="hero-desc">
-          I love to write about DevOps, Infra, Observability, DevEx, and AI's impact on them ✍️ ✨ 🚀
-        </p>  -->
         <div class="hero-ctas">
           <a href="#projects" class="btn">View Projects</a>
           <a href="#contact" class="btn-outline">Contact Me</a>
@@ -99,41 +96,40 @@
       <div class="blogcards">
 
         <div class="blogcard">
-          <img src="assets/img/myphoto.jpeg" alt="Blog 1">
-          <h3>Internal Dev Portal</h3>
-          <p>A portal enabling self-service for engineering teams.</p>
+          <img src="assets/img/blog1.webp" alt="Blog 1">
+          <h3>Smarter Tools, Dumber Mistakes</h3>
+          <p>A tale of “Garbage Code and Silent Bugs🐛”</p>
         </div>
 
         <div class="blogcard">
-          <img src="assets/img/myphoto.jpeg" alt="Blog 2">
-          <h3>Observability Dashboard</h3>
-          <p>Golden signals and performance insights.</p>
+          <img src="assets/img/blog2.webp" alt="Blog 2">
+          <h3>From “Workflows” to “Smart Minds”</h3>
+          <p>How “Auto Scripts” replaced “Self-Reasoning"</p>
         </div>
 
         <div class="blogcard">
-          <img src="assets/img/myphoto.jpeg" alt="Blog 3">
-          <h3>Docs-as-Code System</h3>
-          <p>Automated docs pipeline powered by markdown.</p>
-        </div>
+          <img src="assets/img/blog3.webp" alt="Blog 3">
+          <h3>Why even Great Models fail</h3>
+          <p>The “Hidden Cost” of Bad Context</p>
+       </div>
          
         <div class="blogcard">
-          <img src="assets/img/myphoto.jpeg" alt="Blog 4">
-          <h3>Docs-as-Code System</h3>
-          <p>Automated docs pipeline powered by markdown.</p>
+          <img src="assets/img/blog4.png" alt="Blog 4">
+          <h3>DevRel to DevOps to DevExp</h3>
+          <p>Story of Modern Dev-focused Platform</p>
         </div>
 
        <div class="blogcard">
-          <img src="assets/img/myphoto.jpeg" alt="Blog 5">
-          <h3>Docs-as-Code System</h3>
-          <p>Automated docs pipeline powered by markdown.</p>
+          <img src="assets/img/blog5.png" alt="Blog 5">
+          <h3>“Docs-as-Code” to “Docs-as-Product”</h3>
+          <p>Why Docs need same Empathy as a Feature!</p>
         </div>
-
-       <div class="blogcard">
-          <img src="assets/img/myphoto.jpeg" alt="Blog 6">
-          <h3>Docs-as-Code System</h3>
-          <p>Automated docs pipeline powered by markdown.</p>
-      </div>
- 
+     
+        <div class="blogcard">
+          <img src="assets/img/blog6.png" alt="Blog 6">
+          <h3>Embracing the “Vibe” of Coding</h3>
+          <p>Knowing how to guide AI tools intelligently.</p>
+        </div>
 
       </div>
     </section>
