--- a/index.html
+++ b/index.html
@@ -159,27 +159,27 @@
       <div class="projectcards">
 
         <div class="projectcard">
-          <img src="assets/img/myphoto.jpeg" alt="Project 1">
+          <img src="assets/img/project1.png" alt="Project 1">
         </div>
 
         <div class="projectcard">
-          <img src="assets/img/myphoto.jpeg" alt="Project 2">
+          <img src="assets/img/project2.png" alt="Project 2">
         </div>
 
         <div class="projectcard">
-          <img src="assets/img/myphoto.jpeg" alt="Project 3">
+          <img src="assets/img/project3.png" alt="Project 3">
         </div>
         
         <div class="projectcard">
-          <img src="assets/img/myphoto.jpeg" alt="Project 4">
+          <img src="assets/img/project4.png" alt="Project 4">
         </div>
 
         <div class="projectcard">
-          <img src="assets/img/myphoto.jpeg" alt="Project 5">
+          <img src="assets/img/project5.png" alt="Project 5">
         </div>
 
         <div class="projectcard">
-          <img src="assets/img/myphoto.jpeg" alt="Project 6">
+          <img src="assets/img/project6.png" alt="Project 6">
         </div>
       </div>
     </section>
