--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 
     <div class="heading quote">
       <h3>
-      <!-- “I give structure to chaos and direction to complexity” -->
       “I make it easier to build, ship, understand, and adopt technical products”
       </h3>  
     </div>
@@ -50,10 +49,9 @@
     <nav class="nav">
       <a href="#home" class="nav-link"><img class="icon" src="assets/icons/home.png" alt="Home"> Home</a>
       <a href="#about" class="nav-link"><img class="icon" src="assets/icons/about.png" alt="About"> About</a>
- <!-- <a href="#tools" class="nav-link"><img class="icon" src="assets/icons/skills.png" alt="Tools"> Tools</a> -->
-      <a href="#blogs" class="nav-link"><img class="icon" src="assets/icons/blogs.png" alt="Blogs"> Blogs</a>
+      <a href="#blog" class="nav-link"><img class="icon" src="assets/icons/blogs.png" alt="Blogs"> Blogs</a>
       <a href="#writing" class="nav-link"><img class="icon" src="assets/icons/resume.png" alt="Docs as Code"> Writing</a>
-      <a href="#projects" class="nav-link"><img class="icon" src="assets/icons/projects.png" alt="Projects"> Projects</a>
+      <a href="#project" class="nav-link"><img class="icon" src="assets/icons/projects.png" alt="Projects"> Projects</a>
       <a href="#contact" class="nav-link"><img class="icon" src="assets/icons/contact.png" alt="Contact"> Contact</a>
     </nav>
     
@@ -74,7 +72,7 @@
           <span class="typed" data-typed-items=" a Technical Product Communicator, an Experienced Program Manager, a Developer Advocate"></span>
         </h2>
         <div class="hero-ctas">
-          <a href="#projects" class="btn">View Projects</a>
+          <a href="#blog" class="btn">My TechLog</a>
           <a href="#contact" class="btn-outline">Contact Me</a>
         </div>
       </div>
